# Sprintly

./: .env  API.http  Cargo.toml  GEMINI.md  README.md  makefile
.github/: copilot-instructions.md
.github/instructions/: sprintly-api.instructions.md  sprintly-backend.instructions.md  sprintly-frontend.instructions.md
.github/workflows/: lint-and-format.yml
migrations/: 20260311153049_init_schema.sql  20260311154909_init_sprintly_schema.sql
public/: index.html  login.html  register.html  styles.css  table.js
src/: main.rs
src/config/: env.rs  mod.rs
src/constants/: mod.rs
src/controllers/: auth_controller.rs  mod.rs  project_controller.rs  root_controller.rs  task_controller.rs  task_priority_controller.rs  task_status_controller.rs  workspace_controller.rs
src/db/: mod.rs
src/dtos/: auth_dto.rs  mod.rs  project_dto.rs  task_dto.rs  task_priority_dto.rs  task_status_dto.rs  workspace_dto.rs
src/middleware/: auth.rs
src/models/: mod.rs  task_enum.rs
src/public/: index.html  styles.css
src/routes/: auth_routes.rs  mod.rs  project_routes.rs  task_routes.rs  workspace_routes.rs
src/tests/: auth_test.rs  health_test.rs  mod.rs  workspace_test.rs
src/utils/: api_error.rs  hash.rs  jwt.rs  mod.rs  response.rs
