[package]
name = "Sprintly"
version = "0.1.0"
edition = "2024"

[dependencies]

# Web framework
axum = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "chrono",
  "macros"
] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# UUID
uuid = { version = "1", features = ["serde", "v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client (needed later for Google OAuth)
reqwest = { version = "0.13.2", features = ["json"] }

# JWT
jsonwebtoken = "10.3.0"

# Password hashing
argon2 = "0.5"

# Middleware utilities
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
# cookies
tower-cookies = "0.11.0"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# hashing
rand_core = { version = "0.6", features = ["getrandom"] }